# dotvault

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: Header.tsx  SearchPalette.tsx  Sidebar.tsx  TierBadge.tsx
src/hooks/: useVault.ts
src/lib/: tauri.ts
src/pages/: ComparisonPage.tsx  EnvFilePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  SetupScreen.tsx  UnlockScreen.tsx
