[package]
name = "dotvault"
version = "1.0.0"
description = "One vault for every secret, across every project, every environment."
authors = ["Shivam / Tagmark Studio"]
edition = "2021"

[lib]
name = "dotvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
notify = "6"
walkdir = "2"
chrono = "0.4"
thiserror = "1"
parking_lot = "0.12"
dirs = "5"
